--- a/index.html
+++ b/index.html
@@ -8,7 +8,38 @@
     <title>Jeux du pendue</title>
 </head>
 <body>
-    <h1>Bienvenue sur le jeux du pendue</h1>
-    <img src="./assets/img/background_img.jpg" alt="" id="background_img">
+    <header>
+        <h1>Bienvenue sur le jeux du pendue</h1>
+    </header>
+    <main> 
+        <input type="button" value="A"></button>
+        <input type="button" value="B"></button>
+        <input type="button" value="C"></button>
+        <input type="button" value="D"></button>
+        <input type="button" value="E"></button>
+        <input type="button" value="F"></button>
+        <input type="button" value="G"></button>
+        <input type="button" value="H"></button>
+        <input type="button" value="I"></button>
+        <input type="button" value="J"></button>
+        <input type="button" value="K"></button>
+        <input type="button" value="L"></button>
+        <input type="button" value="M"></button>
+        <input type="button" value="N"></button>
+        <input type="button" value="O"></button>
+        <input type="button" value="P"></button>
+        <input type="button" value="Q"></button>
+        <input type="button" value="R"></button>
+        <input type="button" value="S"></button>
+        <input type="button" value="T"></button>
+        <input type="button" value="U"></button>
+        <input type="button" value="V"></button>
+        <input type="button" value="W"></button>
+        <input type="button" value="X"></button>
+        <input type="button" value="Y"></button>
+        <input type="button" value="Z"></button>
+        <!-- <img src="./assets/img/background_img.jpg" alt="" id="background_img"> -->
+    </main>
+    
 </body>
 </html>
